[gd_scene load_steps=6 format=2]

[ext_resource path="res://sounds/seq_invalid.wav" type="AudioStream" id=1]
[ext_resource path="res://scenes/UIComp/ButtonStandardDefault.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UIComp/NumberTextEdit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/UI/SeqListAddItem.gd" type="Script" id=4]
[ext_resource path="res://theme/tur_dark_theme_mobile.tres" type="Theme" id=5]

[node name="SeqListAddItem" type="Control"]
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 500 )
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayLayout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="DisplayLayout"]
margin_right = 600.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountContainer" type="HBoxContainer" parent="DisplayLayout"]
margin_top = 105.0
margin_right = 600.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DisplayLayout/AmountContainer"]
margin_right = 113.0
margin_bottom = 107.0
text = "For:"

[node name="NumAmount" parent="DisplayLayout/AmountContainer" instance=ExtResource( 3 )]
margin_left = 117.0
margin_right = 600.0
margin_bottom = 107.0
size_flags_horizontal = 3
value = 100.0

[node name="ButtonAdd" parent="DisplayLayout" instance=ExtResource( 2 )]
margin_top = 216.0
margin_right = 600.0
margin_bottom = 323.0
text = "ADD"

[node name="seq_invalid" type="AudioStreamPlayer" parent="DisplayLayout/ButtonAdd"]
stream = ExtResource( 1 )
